--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,20 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroM</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#">T-Shirts</a></li>
-            <li><a href="#">Stickers</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">RetroM</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="#">T-Shirts</a>
+              <a class="nav-link" href="#">Stickers</a>
+              <a class="nav-link" href="#">About Us</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     
-    <div class="container">
+    <div class="con">
         <section class="content">
-            <h1>Unique and <br>
+            <h1 class="showCaseTitle">Unique and <br>
                 Original <br>
                 Designs
             </h1>
@@ -30,9 +38,12 @@
                 RetroM has employed many different artist to help create our unique 
                 designs. 
             </p>
-            <button class="firstButt">Shop Now</button>
+            <button class="firstButton">Shop Now</button>
         </section>
-            <img src="rose.jpg" style="width: 300px;">
-        </div>
+            <img class="showCaseRose" src="rose.jpg">
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </body>
 </html>
