--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,48 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RetroM</title>
-    <link rel="stylesheet" href="/styles/homeStyles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-</head>
+<%- include('partials/head') %> 
+<link rel="stylesheet" href="/styles/homeStyles.css">
+  
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">RetroM</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" href="/shirt">T-Shirts</a>
-              <a class="nav-link" href="#">About Us</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-    
-    <div class="con">
+<%- include('partials/navBar') %> 
+
+<div class="con">
         <section class="content">
             <h1 class="showCaseTitle">Unique and <br>
                 Original <br>
                 Designs
             </h1>
-
             <p>
                 Shop various shirts from many different colors and sizes. We 
                 also sell stickers ranging from all different kinds of designs.
                 RetroM has employed many different artist to help create our unique 
                 designs. 
             </p>
-            <button class="firstButton">Shop Now</button>
+        
+            <a href="/shirt" class="btn btn-success">Shop Now</a>
         </section>
             <img class="showCaseRose" src="rose.jpg">
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </body>
 </html>
