create about page

--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/shirt">SHIRTS</a>
-          <a class="nav-link" href="#">ABOUT US</a>
+          <a class="nav-link" href="/about">ABOUT US</a>
         </div>
       </div>
     </div>
