--- a/views/shirts/new.ejs
+++ b/views/shirts/new.ejs
@@ -7,6 +7,8 @@
     <title>new</title>
 </head>
 <body>
+
+    <a href="/shirt">back</a>
     <h1>new</h1>
 
     <form action="/shirt" method="POST">
