--- a/views/shirts/show.ejs
+++ b/views/shirts/show.ejs
@@ -5,7 +5,7 @@
 
     <a href="/shirt">back</a>
 
-    <p><%= shirts.img %></p>
+    <img src="<%= shirts.image %>" style="width: 300px;">
     <p>"<%= shirts.name.toUpperCase() %>"</p>
     <p>Price: $<%= shirts.price %>.00</p>
     <p>Size: <%= shirts.size %></p>
